PulsePointFeed/PulsePointFeed.css
html, body {
  overflow: auto;
  font-style: normal;
  font-family: tahoma, arial, verdana, sans-serif;
  font-size: 104%;
  padding: 0;
  border: 0 none;
}

h1, h1 {
  font-size: 110%;
  font-weight: bold;
}
h2, h3 {
  font-size: 100%;
}

a {
  text-decoration: none;
  color: inherit;
}

.ModalDialog {
  display: none;
  position: fixed;
  background-color: white;
  border: 1px solid gray;
  border-radius: 5px;
  box-shadow: 0.3em 0.3em 0.3em rgba(0,0,0,0.2);
  height: 1.5em;
  margin-top: 8em;
  padding-top: 0.5em;
  padding-bottom: 0.3em;
  padding-left: 1.2em;
  padding-right: 1.2em;
}

.ModalOverlay {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 100;
  background-color: rgba(0,0,0,0.3);
  align-items: flex-start;
  justify-content: center;
}

.LastRefreshed {
  font-size: 96%;
  padding-top: 0.25em;
  padding-left: 0.55em;
}

.MapStationButton {
  vertical-align: middle;
  padding-left: 0.4em;
  padding-right: 0.4em;
  padding-top: 0.3em;
  padding-bottom: 0.3em;
  width: 2.7em;
  height: 2.1em;
}

.MapCallButton {
  width: 4.1em;
  height: 4.1em;
}

.RefreshButton {
  vertical-align: middle;
  padding-left: 0.1em;
  padding-right: 0.05em;
  padding-bottom: 0.1em;
  width: 1.6em;
  height: 1.6em;
}

.CallTypeIcon {
  vertical-align: middle;
  position: relative;
  bottom: 0.1em;
  padding-right: 0.1em;
  width: 1.9em;
  height: 1.9em;
}

.TransportIcon {
  vertical-align: bottom;
  padding-left: 0.3em;
  margin-bottom: 0.18em;
  width: 0.95em;
  height: 0.9em;
}

.RelTime {
  padding-top: 0.3em;
  font-size: 98%;
}

.Deemphasize {
  color: #707070;
  //font-size: 98%;
  //vertical-align: baseline;
}


hr.Spacer {
  margin-top: 0.4em;
  margin-bottom: 0.4em;
}

#PageHeader {
  background-color: #DDDDDD;
  box-shadow: 0 0 0.4em 0.15em #999999;
  position: fixed;
  z-index: 99;
  top: 0;
  left: 0;
  right: 0;
}

#MapCallFooter {
  background-color: #DDDDDD;
  padding-left: 0.5em;
  padding-right: 0.6em;
  padding-top: 0.3em;
  box-shadow: 0 0 0.4em 0.15em #999999;
  width: 3.9em;
  height: 4.5em;
  position: fixed;
  z-index: 99;
  bottom: 0;
  right: 0;
}

#UnitInput {
  vertical-align: sub;
  background-color: #DDDDDD;
  font-size: 110%;
  font-weight: bold;
}

div.Call {
  padding-left:   0.25em;
  padding-right:  0.35em;
  padding-top:    0.4em;
  padding-bottom: 0.7em;
  //margin-bottom:  1em;
}
div.Call * {
  //padding-left: 0.3em;
}
div.Call div:first-child {
  //padding-left: 0;
}

div.CallType {
  margin-left: -0.25em;
}

div.UnitsEtc {
  padding-top: 0.1em;
  padding-bottom: 0.3em;
}

span.Units {
  font-weight: bold;
}

a.Address {
  color: #0000A0;
  font-size: 110%;
}


.CurrCall {
  background-color: #DDFF99;
  -moz-border-radius: 0.6em;
  -webkit-border-radius: 0.6em;
  margin-top: 0.6em;
  margin-bottom: 0.7em;
}

.CurrUnit {
  //background-color: #DDDDFF;
  color: red;
  //color: #FF6600;
  //-moz-border-radius: 0.4em;
  //-webkit-border-radius: 0.4em;
  padding-left: 0.1em;
  padding-right: 0.1em;
}

.EnRoute {
  color: #F57C00;
}


.LeftLeft {
  display: flex;
  flex-wrap: wrap;
}
.LeftLeft div:first-child,
.LeftRight div:first-child {
  clear: both;
  float: left;
}
.LeftLeft div:nth-child(2) {
  overflow: hidden;
}
.LeftRight div:nth-child(2) {
  overflow: hidden;
  text-align: right;
}
.LeftLeft + *,
.LeftRight + * {
  clear: both;
}










table {
  border-collapse: collapse;
}
td {
  vertical-align: middle;
  padding-left:  0.3em;
  padding-right: 0.3em;
}


.RefreshedNote {
  font-size: 85%;
  font-style: italic;
  color: #888888;
  margin-bottom: 2em;
}

h1.ShiftDate {
  margin-top: 1em;
  margin-bottom: 0.5em;
}

table.Calls {
  width: 98%;
  margin-left: 0;
  border: 0 none;
  border-collapse: separate;
  border-spacing: 0;
}
table.Calls td {
  padding-left:   0.3em;
  padding-right:  0.3em;
  padding-top:    0.7em;
  padding-bottom: 0.8em;
}
table.Calls td:first-child {
  padding-left:   0.8em;
}
table.Calls td:last-child {
  padding-right:  0.8em;
  text-align: right;
}

table.Calls td:nth-child(2),
table.Calls td:nth-child(3) {
  padding-left: 0.3em;
}
table.Calls tr.Current,
table.Calls tr.Current a {
  //color: #999999;
  //color: #BBBBBB;
  //background-color: #F2F2FF;
  background-color: #DDFF99;
}
table.Calls tr.Current td:first-child {
  -moz-border-radius-topleft: 0.6em;
  -moz-border-radius-bottomleft: 0.6em;
  -webkit-border-top-left-radius: 0.6em;
  -webkit-border-bottom-left-radius: 0.6em;
}
table.Calls tr.Current td:last-child {
  padding-right: 0.9em;
  -moz-border-radius-topright: 0.6em;
  -moz-border-radius-bottomright: 0.6em;
  -webkit-border-top-right-radius: 0.6em;
  -webkit-border-bottom-right-radius: 0.6em;
}
table.Calls tr.Past,
table.Calls tr.Past a {
  color: #999999;
  //color: #BBBBBB;
}





.Station {
  margin-top: 1.5em;
  margin-bottom: 0.5em;
}
.Station a {
  color: black;
}




table.StationTable td:first-child {
  border-left: 1px solid #DDDDDD;
}
table.StationTable td:last-child {
  border-right: 1px solid #DDDDDD;
}
table.StationTable tr.RankStart td {
  border-top: 1px solid #DDDDDD;
  padding-top: 0.1em;
}
table.StationTable tr.RankEnd td {
  border-bottom: 1px solid #DDDDDD;
  padding-bottom: 0.2em;
}
table.StationTable tr.Unit td {
  border: 0 none;
  font-weight: bold;
  padding-top: 0.6em;
  padding-bottom: 0.2em;
  //padding-left: 0;
}
table.StationTable tr.Unit a {
  color: black;
}
table.StationTable tr.MyName {
  color: #5588BB;
}
table.StationTable tr.Past,
table.StationTable tr.Past a,
table.StationTable tr.Future,
table.StationTable tr.Future a {
  color: #999999;
  //color: #BBBBBB;
}
table.StationTable tr.MyName.Current,
table.StationTable tr.MyName.Current a {
  color: #4466BB;
  background-color: #DDFF99;
}
table.StationTable tr.MyName.Current td:first-child {
  -moz-border-radius-topleft: 0.8em;
  -moz-border-radius-bottomleft: 0.8em;
  -webkit-border-top-left-radius: 0.8em;
  -webkit-border-bottom-left-radius: 0.8em;
}
table.StationTable tr.MyName.Current td:last-child {
  -moz-border-radius-topright: 0.8em;
  -moz-border-radius-bottomright: 0.8em;
  -webkit-border-top-right-radius: 0.8em;
  -webkit-border-bottom-right-radius: 0.8em;
}

